--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -13,6 +13,7 @@
       <h2>Experience Details</h2>
       <div class="form-inputs">
         <strong>Course: </strong> <%= @experience.course.name %></br></br>
+        <%= f.input :course_id, as: :hidden %>
         <%= f.input :name %>
         <%= f.input :active %>
         <table width="100%">
