--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -59,9 +59,7 @@
     <% end %>
     <% if @project.groups.any? || @project.course.enrolled_students.any? %>
       <table id="project_table" width="90%" data-role="table"
-          id="basicTable"
-          data-column-btn-theme"<%= theme_code %>" 
-          data-column-popup-theme="<%= theme_code %>" 
+          id="groups_table"
           data-mode="columntoggle"
           data-column-btn-theme="<%= theme_code %>" 
           data-column-btn-text="Select columns&hellip;"
