--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -70,6 +70,7 @@
         <table data-role="table"
           id="basicTable"
           data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>"
           data-column-btn-text="Show/hide columns&hellip;"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
 
@@ -114,8 +115,9 @@
     No Bingo! games.</br>
   <% else %>
     <table data-role="table"
-          id="experiences_table"
+          id="bingo_table"
           data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>"
           data-column-btn-text="Show/hide columns&hellip;"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
       <thead>
@@ -156,6 +158,7 @@
     <table data-role="table"
           id="projects_table"
           data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>"
           data-column-btn-text="Show/hide columns&hellip;"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
       <thead>
@@ -196,6 +199,7 @@
     <table data-role="table"
           id="experiences_table"
           data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>"
           data-column-btn-text="Show/hide columns&hellip;"
           class="table-stroke ui-shadow table-stripe table-ui-responsive " >
       <thead>
