Cleaned up Bingo! admin and did some work on tests.

--- a/app/views/bingo_games/_form.html.erb
+++ b/app/views/bingo_games/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
     <div id="details" class="ui-body-<%= theme_code %> ui-content">
-      <h2>Experience Details</h2>
+      <h2>Bingo! Game Details</h2>
       <div class="form-inputs">
         <strong>Course:</strong> <%= @bingo_game.course.name %></br></br>
         <%= f.input :course_id, as: :hidden %>
