--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -68,7 +68,7 @@
             <th>Student</th>
             <% groups = @project.groups %>
             <% groups.each do |group| %>
-              <th data-priority="0"><%= group.name %></th>
+              <th align="center" data-priority="0"><%= group.name %></th>
             <% end %>
             <th data-priority="0">[no group]</th>
           </tr>
