--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -10,21 +10,24 @@
     <tr>
       <th align="right">For:</th>
       <td>
-        <% if !@candidate_list.bingo_game.group_option? # Is group play allowed? %>
-          <%= @current_user.name %>
-        <% elsif @candidate_list.user.present? # Is this already group play? %>
-          <%= @current_user.name %>
-          <% if @candidate_list.group_requested # Have you already requested collaboration? %>
-            [Still waiting for a response to your help request]
-          <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you? %>
-            Your team wants to collaborate: 
-            <%= link_to "Accept?", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: true ) %> or 
-            <%= link_to "Decline?", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: false ) %> 
+        <%= @current_user.name %>
+
+        <% if @candidate_list.bingo_game.group_option? # Is group play allowed? %>
+          <% if @candidate_list.is_group? %>
+            <em>on behalf of: <%= @candidate_list.group.name %></em>
           <% else %>
-            <%= link_to "Invite your group to help?", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: true ) %> 
+            <% if @candidate_list.group_requested # Have you already requested collaboration? %>
+              [Still awaiting a response to your group help request]
+            <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you? %>
+              Your team wants to collaborate: 
+              <%= link_to "Accept", request_bingo_collaboration_path( 
+                        id: @candidate_list.id, desired: "yes" ) %> or 
+              <%= link_to "Decline", request_bingo_collaboration_path( 
+                        id: @candidate_list.id, desired: "no" ) %> 
+            <% else %>
+              <%= link_to "Invite your group to help?", request_bingo_collaboration_path( 
+                        id: @candidate_list.id, desired: "yes" ) %> 
+            <% end %>
           <% end %>
         <% end %>
     </tr>
