Working on the review_candidates code.

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -43,7 +43,7 @@
         class="table-stroke-ui ui-shadow table-stripe table-ui-responsive" >
     <thead>
       <tr>
-        <th width-"5%">#</th>
+        <th width="5%">#</th>
         <th width="30%">Term</th>
         <th>Definition</th>
       </tr>
