Fixed another issue with the tests.

--- a/app/views/bingo_games/review_candidates.html.erb
+++ b/app/views/bingo_games/review_candidates.html.erb
@@ -25,7 +25,7 @@
       </tr>
     </thead>
     <tbody><% count = 0 %>
-      <% @bingo_game.candidates.each do |candidate| %>
+      <% @bingo_game.candidates.completed.each do |candidate| %>
       <tr>
         <td><%= count += 1 %></td>
         <td><%= candidate.term %></td>
