--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -96,14 +96,17 @@
           </tr>
         <% elsif task.class.name == "BingoGame" %>
           <tr><% candidate_list = task.candidate_list_for_user( @current_user ) %>
-            <td>
-              <%= link_to "Terms for: " + task.name, edit_candidate_list_path( candidate_list ) %>
-            </td>
             <% if task.is_open? %>
+              <td>
+                <%= link_to "Terms for: " + task.name, edit_candidate_list_path( candidate_list ) %>
+              </td>
               <td>
                 <%= candidate_list.percent_complete %>%
               </td>
             <% elsif task.reviewed %>
+              <td>
+                <%= link_to "Terms for: " + task.name, candidate_list_path( candidate_list ) %>
+              </td>
               <td>
                 <% task.concepts.count %> concepts
               </td>
